fix(styles): icon group alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -363,7 +363,6 @@ header.header-main > nav {
   display: flex;
   flex-direction: row;
   align-items: center;
-  height: 44px;
 }
 
 @media screen and (min-width: 768px) {
